# advent-of-code-2024

./: README.md  meson.build
include/: day1.hh
src/: day1.cc  main.cc
tests/: day1.cc
